--- a/package.json
+++ b/package.json
@@ -6,13 +6,17 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "~1.17.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
     "express": "~4.15.2",
+    "express-session": "^1.15.5",
     "mongoose": "^4.11.4",
     "morgan": "~1.8.1",
-    "serve-favicon": "~2.4.2",
-    "nodemon": "~1.11.0"
+    "nodemon": "~1.11.0",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
+    "serve-favicon": "~2.4.2"
   }
 }
